add couple paragraphs to A-Ward-P-beta description

--- a/eremeykin-mirkin-paper-rus.tex
+++ b/eremeykin-mirkin-paper-rus.tex
@@ -9,8 +9,7 @@
 
 \year{2018}
 \title{СОКРАЩЕНИЕ ВРЕМЕНИ ВЫЧИСЛЕНИЙ В АГЛОМЕРАТИВНОМ КЛАСТЕР-АНАЛИЗЕ ПЕРЕХОДОМ К ПОДВЫБОРКАМ}
-%\thanks{Работа выполнена при финансовой поддержке \dots
-%(грант \mbox{№\,\dots}).}
+\thanks{Тут пишут про финансовую поддержку, но денег нам пока никто не давал.}
 
 \authors{П.А.~ЕРЕМЕЙКИН, студент~НИУ~ВШЭ\\
 Б.Г.~МИРКИН, док.~техн.~наук\\
@@ -150,6 +149,10 @@
 
 Различают два вида иерархический  алгоритмов: агломеративные (объединяющие) и дивизивные (разделяющие). Агломеративные алгоритмы работают по принципу ``снизу верх''. На начальном этапе работы таких алгоритмов каждый единичный объект выступает в роли кластера. Во время работы происходит попарное объединение кластеров до тех пор, пока не будет достигнуто заданное число кластеров. Дивизивные алгоритмы в противоположность агломеративным действуют ``сверху вниз''.
 
+Алгоритм Ward относится к агломеративным. На каждой итерации происходит слияние ближайших кластеров, таким образом чтобы внутрикластерная дисперсия была минимальной. Исходя из принципа работы алгоритма Ward видно, что на начальных этапах происходит сравнение большого числа кластеров, примерно равного числу объектов, что требует продолжительного время вычисления. Решением этой проблемы является метод аномальных кластеров, выполняющий роль инициализации. Инициализация осуществляется в две стадии: на первой выявляются аномальные кластеры (алгоритм \ref{alg:anomalous-p-beta}), а на второй происходит из стабилизация (алгоритм \ref{alg:imwk-means}). Ниже описан алгоритм взвешенной аномальной кластеризации для общего случая степени Минковского $ p $ и степени весовых коэффициентов $ \beta $.
+
+
+
 \begin{algorithm}[(Инициализация аномальными кластерами)] \label{alg:anomalous-p-beta}
 	\
 	\begin{enumlist}[.] 
@@ -180,6 +183,8 @@
 		\item \textit{ Результат.} Результатом работы алгоритма является разбиение S, а также списки центров кластеров $ \mathtt{c\_list} $ и весов $ \mathtt{w\_list} $.
 	\end{enumlist}
 \end{algorithm}
+
+Характерная особенность структуры данных, генерируемой алгоритмом \ref{alg:anomalous-p-beta} состоит в том, что, во-первых, число получаемых кластеров всегда больше, чем их действительное количество, а во-вторых, что эта структура сгущается ближе к центру данных. Для смягчения второй особенности применяется вариация \mbox{k-means}, которая использует те же параметры степени Минковского $ p $ и степени весовых коэффициентов $ \beta $, а также начальное состояние, порождённое алгоритмом аномальной инициализации. Эта вариация получила название \mbox{$ imwk$-means$_{p\beta} $} и описана ниже.
 
 \begin{algorithm}[(\mbox{$ imwk$-means$_{p\beta} $})] \label{alg:imwk-means}
 	\
@@ -225,42 +230,6 @@
 	\end{enumlist}
 \end{algorithm}
 
-
-\newpage
-Исходя из описания алгоритма Ward видно, что на начальных этапах работы происходит сравнение большого числа кластеров, примерно равного числу объектов. 
-
-
-Алгоритм Ward относится к агломеративным. На каждой итерации происходит слияние ближайших кластеров, таким образом чтобы внутрикластерная дисперсия была минимальной. Близость кластеров определяется по формуле:
-
-\begin{gather} \label{eq:ward-distance}
-	d_{Ward}(C_a,C_b)=\dfrac{N_aN_b}{N_a+N_b}\sum_{v=1}^{V}(c_{av}-c_{bv})^2,
-\end{gather}
-
-\begin{tabular}{llll}
-	где & $ C_a,\:C_b $ & {---} & два произвольных кластера, \\
-	& $ N_a,\:N_b $ & {---} & количество объектов в кластерах $ C_a $ и $ C_b $ соответственно \\
-	& $ V $ & {---} & число признаков у каждого объекта $ y_i \in Y $ \\
-	& $ c_{va},\:c_{vb} $ & {---} & $ v $-ая координата центров кластеров $ C_a $ и $ C_b $ соответственно 
-\end{tabular}
-
-В традиционной постановке алгоритм Ward формулируется следующим образом:
-
-
-
-
-%\begin{algorithm}[(Ward)] \label{alg:experiment}
-%	\
-%	\begin{enumlist}[.] 
-%		\item \textit{Инициализация.}
-%		Задаться требуемым количеством кластеров $ K $. Установить текущее число кластеров $ k=N $ и текущее разбиение $ S=\{C_1,\ldots,C_N\} $, где каждый кластер состоит из единственного объекта $ C_k=\{y_k\} $. Центр кластера совпадает с объектом, входящим в этот кластер.
-%		\item \label{itm:merge}\textit{Слияние.}
-%		Определить два ближайших кластера $ C_a,\:C_b $, используя формулу \ref{eq:ward-distance}. Произвести слияние найденных кластеров в результирующий кластер $ C_{ab} = C_a \cup C_b $, содержащий одновременно объекты  $ C_a $ и $ C_b $.
-%		\item \textit{Обновление центра.}
-%		Установить центр кластера $ C_{ab} $ равным покомпонентному среднему всех объектов, входящих в $ C_{ab} $.
-%		\item \textit{Условие остановки.}
-%		Уменьшить текущее количество кластеров $ k $ на единицу. Если $ k>1 $ или $ k>K $, перейти к шагу \ref{itm:merge}. В противном случае текущее разбиение $ S $ является результирующим.
-%	\end{enumlist}
-%\end{algorithm}
 \newpage
 \subsection{Генератор данных типа kovaleva}\label{sec:data-generation}
 \subsection{Характеристика разбиения SW}\label{sec:sw}
