complete SW section

--- a/eremeykin-mirkin-paper-rus.tex
+++ b/eremeykin-mirkin-paper-rus.tex
@@ -9,7 +9,7 @@
 
 \year{2018}
 \title{СОКРАЩЕНИЕ ВРЕМЕНИ ВЫЧИСЛЕНИЙ В АГЛОМЕРАТИВНОМ КЛАСТЕР-АНАЛИЗЕ ПЕРЕХОДОМ К ПОДВЫБОРКАМ}
-\thanks{Тут пишут про финансовую поддержку, но денег нам пока никто не давал.}
+\thanks{Тут пишут про финансовую поддержку.}
 
 \authors{П.А.~ЕРЕМЕЙКИН, студент~НИУ~ВШЭ\\
 Б.Г.~МИРКИН, док.~техн.~наук\\
@@ -145,11 +145,11 @@
 
 \subsection{Алгоритм \mbox{A-Ward$ _{p\beta} $}} \label{sec:a-ward-p-beta}
 
-Рассмотрение алгоритма \mbox{A-Ward$ _{p\beta} $} следует начинать с описания общего принципа работы иерархических алгоритмов и, в частности, Ward. В отличие от неиерархических алгоритмов, которые формируют плоскую структуру кластеров, как, например, \mbox{k-means}, иерархические алгоритмы в качестве результата предоставляют дополнительную информацию относительно взаимосвязей между кластерами. Эта информация выражена в виде вложенной последовательности разбиений \cite{Amorim-Makarenkov-Mirkin} и графически может быть изображена с помощью дендрограммы. На каждом уровне дендрограммы определённый объект $ y_i \in Y$ принадлежит единственному кластеру $ C_k $. В то же время этот объект может принадлежать на других уровнях другим кластерам, которые образованы разбиением кластера $ C_k $ или слиянием с другими кластерами. 
+Описание алгоритма \mbox{A-Ward$ _{p\beta} $} следует начать с рассмотрения общего принципа работы иерархических алгоритмов. В отличие от неиерархических алгоритмов, которые формируют плоскую структуру кластеров, как, например, \mbox{k-means}, иерархические алгоритмы в качестве результата предоставляют дополнительную информацию относительно взаимосвязей между кластерами. Эта информация выражена в виде вложенной последовательности разбиений \cite{Amorim-Makarenkov-Mirkin} и графически может быть изображена с помощью дендрограммы. На каждом уровне дендрограммы определённый объект $ y_i \in Y$ принадлежит единственному кластеру $ C_k $. В то же время этот объект может принадлежать на других уровнях другим кластерам, которые образованы разбиением кластера $ C_k $ или слиянием с другими кластерами. 
 
 Различают два вида иерархический  алгоритмов: агломеративные (объединяющие) и дивизивные (разделяющие). Агломеративные алгоритмы работают по принципу ``снизу верх''. На начальном этапе работы таких алгоритмов каждый единичный объект выступает в роли кластера. Во время работы происходит попарное объединение кластеров до тех пор, пока не будет достигнуто заданное число кластеров. Дивизивные алгоритмы в противоположность агломеративным действуют ``сверху вниз''.
 
-Алгоритм Ward относится к агломеративным. На каждой итерации происходит слияние ближайших кластеров, таким образом чтобы внутрикластерная дисперсия была минимальной. Исходя из принципа работы алгоритма Ward видно, что на начальных этапах происходит сравнение большого числа кластеров, примерно равного числу объектов, что требует продолжительного время вычисления. Решением этой проблемы является метод аномальных кластеров, выполняющий роль инициализации. Инициализация осуществляется в две стадии: на первой выявляются аномальные кластеры (алгоритм \ref{alg:anomalous-p-beta}), а на второй происходит из стабилизация (алгоритм \ref{alg:imwk-means}). Ниже описан алгоритм взвешенной аномальной кластеризации для общего случая степени Минковского $ p $ и степени весовых коэффициентов $ \beta $.
+Алгоритм Ward, усовершенствованием которого является алгоритм \mbox{A-Ward$ _{p\beta} $}, относится к агломеративным. На каждой итерации происходит слияние ближайших кластеров, таким образом чтобы внутрикластерная дисперсия была минимальной. Исходя из принципа работы алгоритма Ward видно, что на начальных этапах происходит сравнение большого числа кластеров, примерно равного числу объектов, что требует продолжительного время вычисления. Решением этой проблемы является метод аномальных кластеров, выполняющий роль инициализации. Инициализация осуществляется в две стадии: на первой выявляются аномальные кластеры (алгоритм \ref{alg:anomalous-p-beta}), а на второй происходит их стабилизация (алгоритм \ref{alg:imwk-means}). Ниже описан алгоритм взвешенной аномальной кластеризации для общего случая степени Минковского $ p $ и степени весовых коэффициентов $ \beta $.
 
 
 
@@ -202,6 +202,9 @@
 	\end{enumlist}
 \end{algorithm}
 
+Итоговое разбиение строится агломеративным методом, обеспечивая заданное число кластеров. Модификация алгоритма Word с учетом весов признаков и для произвольной степени Минковского описана ниже.
+
+
 \begin{algorithm}[(\mbox{A-Ward$ _{p\beta} $})] \label{alg:a-ward-p-beta}
 	\
 	\begin{enumlist}[.] 
@@ -224,22 +227,38 @@
 		\item \textit{Обновление весов.} Вычислить новые веса $ w_{kv} $ по формуле \ref{eq:weights} для $ k=1,\ldots,K $ и $ v=1,\ldots,V $.
 		
 		\item \textit{Условие остановки.} Уменьшить текущее число кластеров на единицу. Если текуще число кластеров все ещё больше единицы или требуемого числа кластеров, прейти к шагу \ref{itm:a-ward-p-beta-merge} .
-		
-		
-		
+			
 	\end{enumlist}
 \end{algorithm}
 
-\newpage
-\subsection{Генератор данных типа kovaleva}\label{sec:data-generation}
-\subsection{Характеристика разбиения SW}\label{sec:sw}
-\subsection{Характеристика разбиения ARI}\label{sec:ari}
 
-данные 
-способ оценки
-что включено в сравнение
-(со всеми деталями, включая АУорд, Силуэт Видт и пр.)
+Алгоритм \mbox{A-Ward$ _{p\beta} $} хорошо зарекомендовал себя при тестах как на синтетических, так и на реальных данных. Особый интерес представляют возможности алгоритма при обработки зашумленных данных. Благодаря описанным нововведениям алгоритмом учитывается различные признаки с учётом их дисперсии в каждом кластере. 
 
+\subsection{Генератор данных}\label{sec:data-generation}
+Для генерации данных используется простой, но удобный подход, описанный в работе \cite{Kovaleva}. Используя единственный параметр, предложенный генератор позволяет регулировать разброс объектов внутри кластера и одновременно взаимное смешивание кластеров.
+
+Структура получаемых данных представляют собой заданное количество гауссовых кластеров $ K $, сформированных при фиксированном общем числе объектов $ N $ и признаков $ V $ и определённом минимальном количестве объектов в каждом кластере $ m $. Остаток объектов $ \delta = N - K\cdot m $ распределяется случайно и равновероятно по всем кластерам. 
+
+Кластеры порождается независимо гауссовым распределением. Центры кластеров генерируется как случайный $ V $-мерный вектор с равной вероятностью внутри гиперкуба $ [-a,a]^V $. При этом параметр $ a \in [0,1] $ отвечает за степень взаимного смешивания кластеров: чем больше значение параметра, тем сложнее разделить соседние кластеры. Ковариационная матрица кластеров генерируется со случайными диагональными элементами, значения которых равномерно распределены в диапазоне $ [0.025,\:0.05] $.
+
+\subsection{Характеристика разбиения Silhouette Width}\label{sec:sw}
+Эмпирическая характеристика Silhouette Width (SW) позволяет оценить качество разбиения непосредственно, не опираясь на известное эталонное разбиение, поэтому она хорошо подходит для поиска параметров алгоритма \mbox{A-Ward$ _{p\beta} $} на реальных данных. Для воспроизведения этой ситуации SW будет использована в эксперименте. 
+
+Значение характеристики SW для разбиения $ S $ определяется как среднее значение SW для всех объектов $ y_i \in Y $. Silhouette Width для одного объекта рассчитывается по следующей формуле:
+
+\begin{gather} \label{eq:ward-p-beta-distance}
+SW(y_i) = \dfrac{b(y_i)-a(y_i)}{max\{a(y_i),b(y_i))\}}
+\end{gather}
+
+\begin{tabular}{llll}
+	где & $ a(y_i) $ & {---} & среднее расстояние между объектом $ y_i \in C_k $ и всеми объектами, \\
+	& & &	принадлежащими тому же кластеру $ C_k $, что и $ y_i $, \\
+	& $ b(y_i) $ & {---} & наименьшее среднее расстояние между объектом $ y_i \in C_k $ и \\
+	& & &  объектами, которые принадлежат другим кластерам. \\
+\end{tabular}
+
+
+\subsection{Индекс ARI}\label{sec:ari}
 
 \section{Организация эксперимента}
 
