complete ARI section

--- a/eremeykin-mirkin-paper-rus.tex
+++ b/eremeykin-mirkin-paper-rus.tex
@@ -242,11 +242,11 @@
 Кластеры порождается независимо гауссовым распределением. Центры кластеров генерируется как случайный $ V $-мерный вектор с равной вероятностью внутри гиперкуба $ [-a,a]^V $. При этом параметр $ a \in [0,1] $ отвечает за степень взаимного смешивания кластеров: чем больше значение параметра, тем сложнее разделить соседние кластеры. Ковариационная матрица кластеров генерируется со случайными диагональными элементами, значения которых равномерно распределены в диапазоне $ [0.025,\:0.05] $.
 
 \subsection{Характеристика разбиения Silhouette Width}\label{sec:sw}
-Эмпирическая характеристика Silhouette Width (SW) позволяет оценить качество разбиения непосредственно, не опираясь на известное эталонное разбиение, поэтому она хорошо подходит для поиска параметров алгоритма \mbox{A-Ward$ _{p\beta} $} на реальных данных. Для воспроизведения этой ситуации SW будет использована в эксперименте. 
+Эмпирическая характеристика Silhouette Width (SW) \cite{SW-Canonical} позволяет оценить качество разбиения непосредственно, не опираясь на известное эталонное разбиение, поэтому она хорошо подходит для поиска параметров алгоритма \mbox{A-Ward$ _{p\beta} $} на реальных данных. Для воспроизведения этой ситуации SW будет использована в эксперименте. 
 
-Значение характеристики SW для разбиения $ S $ определяется как среднее значение SW для всех объектов $ y_i \in Y $. Silhouette Width для одного объекта рассчитывается по следующей формуле:
+Значение характеристики для разбиения $ S $ определяется как среднее значение SW для всех объектов $ y_i \in Y $. Silhouette Width для одного объекта рассчитывается по следующей формуле:
 
-\begin{gather} \label{eq:ward-p-beta-distance}
+\begin{gather} \label{eq:sw}
 SW(y_i) = \dfrac{b(y_i)-a(y_i)}{max\{a(y_i),b(y_i))\}}
 \end{gather}
 
@@ -257,8 +257,26 @@ SW(y_i) = \dfrac{b(y_i)-a(y_i)}{max\{a(y_i),b(y_i))\}}
 	& & &  объектами, которые принадлежат другим кластерам. \\
 \end{tabular}
 
+Значения характеристики SW лежат в промежутке от -1 до 1. Разбиения, для которых характеристика SW ближе к 1 предпочтительнее тех, у которых SW меньше.
 
 \subsection{Индекс ARI}\label{sec:ari}
+Индекс ARI (Adjusted Rand Index) \cite{ARI-canonical} является популярным способом сравнения эталонного и заданного разбиения. В условиях проводимого эксперимента используются синтетические данные, для которых известно истинное разбиение, поэтому для оценки эффективности применения эмпирической характеристики SW можно задействовать ARI. Формула для вычисления индекса записывается следующим образом:
+
+\begin{gather} \label{eq:ari}
+ARI = \dfrac{\sum_{ij}\binom{n_{ij}}{2}-\left [ \sum_{i}\binom{a_{i}}{2}\sum_{j}\binom{b_{j}}{2} \right ]/\binom{n}{2}}{\dfrac{1}{2} \left [ \sum_i \binom{a_i}{2} + \sum_j \binom{b_j}{2} \right ] - \left [ \sum_i \binom{a_i}{2} \sum_j \binom{b_j}{2} \right ]/ \binom{n}{2}}
+\end{gather}
+ 
+
+\begin{tabular}{llll}
+	где & $ n_{ij} = |C_i \cap C_j| $ & {---} & число объектов, входящий одновременно в $ i $-ый \\  
+	& & &кластер в первом разбиении и в $ j $-ый --- во втором. \\
+	& $ a_{i} = \sum_{j=1}^{K} |C_i \cap C_j| $ & {---} & число объектов, ходящих в $ i $-ый кластер в первом \\
+	& & &разбиении\\
+	& $ b_{j} = \sum_{i=1}^{K} |C_i \cap C_j| $ & {---} & число объектов, ходящих в $ j $-ый кластер во втором\\		
+	& & & разбиении\\
+\end{tabular}
+
+Как и характеристика SW, индекс ARI принимает значения от -1 до 1. ARI достигает 1 только в том случае, если два разбиения совпадают.
 
 \section{Организация эксперимента}
 
