--- a/eremeykin-mirkin-paper-rus.tex
+++ b/eremeykin-mirkin-paper-rus.tex
@@ -18,11 +18,11 @@
 \maketitle
 
 \begin{abstract}
-Краткая аннотация статьи или заметки. Иногда не бывает. 
-\begin{enumerate}
-	\item Написать аннотацию
-	\item Проверить ссылки на литературу и добавить в библиографию недостающие
-\end{enumerate}
+Кластер-анализ находит широкое применение в различных областях деятельности. Наиболее популярный в настоящее время алгоритм кластеризации \mbox{k-means} обладает существенными недостатками, часть из которых удаётся успешно устранить благодаря современным исследованиям, предлагающим модернизации алгоритма. Одним из эффективных алгоритмов, предложенных в последнее время является \mbox{A-Ward$ _{p\beta} $}. Как любое новое решение, алгоритм \mbox{A-Ward$ _{p\beta} $} требует выработки рекомендаций по применению. Данная статья посвящена поиску способов определения параметров, задействованных в алгоритме. Ранее предлагаемые способы опираются на перебор всех возможных значений параметров в определённом интервале и требуют больших временных затрат. Для ускорения подбора параметров предлагается произвести переход к подвыборкам, существенно меньшего размера чем исходные данные и производить перебор для подвыборок. Авторы статьи предлагают рассмотреть различные способы формирования подвыборок и оценить эффективность этих способов с точки зрения затрачиваемого времени и качества результирующего разбиения.
+%\begin{enumerate}
+%	\item Написать аннотацию
+%	\item Проверить ссылки на литературу и добавить в библиографию недостающие
+%\end{enumerate}
 \end{abstract}
 
 
@@ -44,10 +44,10 @@
 
 Численные эксперименты на синтетических и реальных данных показали высокую эффективность алгоритма \mbox{A-Ward$ _{p\beta} $} в том числе для случаев с большой зашумленностью признаков, поэтому алгоритм представляет интерес для применения в практических случаях. Тем не менее, ввод новых параметров $ p $ и $ \beta $ породил необходимость выработки методики для определения их значений. В статье \cite{SW-Based-Search} рассмотрен подход к определению $ p $ и $ \beta $ методом перебора, в котором критерием качества результата служит эмпирическая характеристика Silhouette Width (SW)\cite{SW-Canonical}. Такой подход поглощает преимущество в производительности, достигнутое введением предварительного шага аномального кластер-анализа, и требует больших временных затрат.
 
-Специалистам по анализу данных хорошо известна идея, которая лежит в основе принципа кросс-валидации \cite{None} и заключается в сохранении основных свойств выборки даже в случае исключения из неё некоторой части объектов. Та же идея предположительно может быть использована для определения рациональных значений $ p $ и $ \beta $ по подвыборкам. Таким образом, в данной статье будет экспериментально исследована возможность выбора параметров $ p $ и $ \beta $ для алгоритма \mbox{A-Ward$ _{p\beta} $} путём перехода к подвыборкам и с использованием характеристики SW в качестве критерия качества результата.
+Специалистам по анализу данных хорошо известна идея, которая лежит в основе принципа кросс-валидации \cite{CrossValidation-canonical} и заключается в сохранении основных свойств выборки даже в случае исключения из неё некоторой части объектов. Та же идея предположительно может быть использована для определения рациональных значений $ p $ и $ \beta $ по подвыборкам. Таким образом, в данной статье будет экспериментально исследована возможность выбора параметров $ p $ и $ \beta $ для алгоритма \mbox{A-Ward$ _{p\beta} $} путём перехода к подвыборкам и с использованием характеристики SW в качестве критерия качества результата.
 
 \section{Предлагаемое решение}
-\subsection{Описание эксперимента}
+\subsection{Описание эксперимента} \label{sec:experiment-description}
 Пусть задано множество $ Y $ из $ N $ объектов, каждый из которых обладает $ V $ признаками. Такое множество можно выразить в виде таблицы данных:
 \begin{gather} \label{eq:data-table}
 	Y= \begin{pmatrix} 
@@ -278,21 +278,43 @@ ARI = \dfrac{\sum_{ij}\binom{n_{ij}}{2}-\left [ \sum_{i}\binom{a_{i}}{2}\sum_{j}
 
 Как и характеристика SW, индекс ARI принимает значения от -1 до 1. ARI достигает 1 только в том случае, если два разбиения совпадают.
 
-\section{Организация эксперимента}
+%\section{Организация эксперимента}
 
 \section{Результаты эксперимента}
-С пояснениями и выводами
+Результаты эксперимента приведены на рисунке \ref{fig:plots}, который состоит из трёх строк и трёх столбцов. Первая строка содержит диаграммы, на которых закрашенными столбцами изображено среднее значение индекса ARI, вычисленного относительно разбиения, полученного как результат работы \mbox{A-Ward$ _{p\beta} $}, с параметрами $ p $ и $ \beta $, определёнными по алгоритму \ref{alg:experiment} с критерием качества SW. Вторая строка отличается от первой тем, что в роли критерия качества вместо SW был использован индекс ARI относительно истинного разбиения. В третьей строке изображены диаграммы для суммарного времени работы \mbox{A-Ward$ _{p\beta} $} на заданных подвыбокрах без учёта вычисления критериев качества. Эксперименты проводились на ПК с процессором  Intel\textsuperscript{\textregistered} Core\textsuperscript{\texttrademark}2 Quad Q9550, работающем на частоте 2.83 ГГц и с объёмом оперативной памяти 4 Гб.
+
+ Столбцы на рисунке \ref{fig:plots} соответствуют трём вариантам количества кластеров в сгенерированных данных: 7, 12 или 19. Тонкими линиями показаны среднеквадратичное отклонения, вычисленные по 10 экспериментам. Цвет столбца определяет один из двух анализируемых подходов разрешения неопределённости, которые описаны в разделе \ref{sec:experiment-description}. Красный соответствует первому подходу, а синий --- второму.
+   
+\begin{figure}[!h]
+	\begin{center}
+		\includegraphics[width=\textwidth]{imgs/bars.png} 
+%		\includegraphics[width=\textwidth]{imgs/antennae.png} 
+	\end{center}
+	\caption{Диаграммы результатов}
+	\label{fig:plots}
+\end{figure}
+
+Относительно сравнения используемых критериев качества можно сделать вывод, что характеристика SW показывает результаты, сопоставимые с результатами ARI. Наибольшее расхождение средних значений индекса ARI составило $ 0,044 $ для схемы перехода к подвыборкам 1-200 при 19 кластерах и втором подходе разрешения неопределённости. Таким образом, при выборе параметров \mbox{A-Ward$ _{p\beta} $} на реальных данных, для которых не известно истинное разбиение, применение характеристики SW оправдано.
+
+При сравнении двух подходов разрешения неопределённости выясняется, что второй подход проявляет себя лучше, в среднем на $ 0,020 $ единиц ARI. Исходя из этого, второй подход разрешения неопределённости можно рекомендовать для практического применения.
+
+Существенна экономия времени наблюдается только для однократного формирования выборки по схемам 1-100 и 1-200. Пятикратное формирование не даёт значимого ускорения и в некоторых случаях работает медленнее, чем полная схема 1-1000. В целом,  предлагаемое решение является эффективным лишь для небольшого числа кластеров и существенно ухудшает результат относительно анализа по полной выборке в противном случае. Любопытно также отметить, что значение индекса ARI разбиения, полученного по полной выборке 1-1000 для данных с семью кластерами, равно единице для всех 10 экспериментов, что вновь характеризует алгоритм \mbox{A-Ward$ _{p\beta} $} с лучшей стороны.
 
 \section{Заключение}
 
-Что сделано и куда двигаться.
-\begin{enumlist} % перечни, нумеруемые 1) 2) и т.д.
+Экспериментально проверено предположение о возможности перехода к подвыборкам при определении эффективных параметров алгоритма \mbox{A-Ward$ _{p\beta} $}. В эксперименте использованы синтетические данные для трёх случаев числа кластеров: 7, 12 и 19. Стоит отметить, что эти случаи соответствуют трём типам отношения числа кластеров и признаков: число кластеров меньше числа признаков, примерно равно и больше. Для алгоритмов, в которых используется аномальный кластер-анализ, рассмотрение указанных характерных случаев необходимо для разносторонней оценки их возможностей. При выборе наилучшей пары параметров из 1681 комбинаций были проанализированы два подхода разрешения неопределённости относительно нескольких максимумов характеристики качества. Для оценки правомерности выбора параметров по характеристике SW было произведено сравнение качества результирующего разбиения со случаем использования индекса ARI. Рассмотрено четыре схемы формирования подвыборок с однократным и пятикратным выбором по 100 и 200 объектов.
+
+В ходе эксперимента в очередной раз была подтверждена эффективность \mbox{A-Ward$ _{p\beta} $}, что делает его привлекательным для дальнейших исследований, тем более что однозначного и полного ответа относительно быстрого выбора параметров $ p $ и $ \beta $ по результатам проведённой работы выработать не удалось. Для более разносторонней проработки темы следует провести аналогичные исследования для различных вариантов размерности данных и степени взаимного смешивания кластеров. Тем не менее, были получены следующие ценные выводы:
+
+\begin{enumlist} 
 	\item
-	3 разных числа кластеров соответствуют числу признаков $ >,<,\approx $ признаков	
+	Применение эмпирической характеристики SW для выбора наилучшего разбиения оправдано;
 	\item
-	SW работает не хуже ARI
+	При решении практических задач, для выбора пары параметров из определённого множества возможных вариантов следует отдать предпочтение набору с наименьшим отклонением от усреднённых значений;
 	\item
-	Сокращение по времени есть
+	Использование пятикраного формирования выборки теряет смысл ввиду больших временных затрат.
+	\item
+	Для случая с небольшим числом кластеров схема формирования выборки 1-100 может быть рекомендована как средство выбора рациональных параметров алгоритма и обеспечивает существенный выигрыш по времени.
 \end{enumlist}
 
 \begin{thebibliography}{10}
@@ -304,11 +326,11 @@ ARI = \dfrac{\sum_{ij}\binom{n_{ij}}{2}-\left [ \sum_{i}\binom{a_{i}}{2}\sum_{j}
 
 \bibitem{K-Means-canonical}
 {\it Ball G.H., Hall D.J.}
-A clustering technique for summarizing multivariate data, Behavioral Science. 1967. V. 12 Iss. 2 P. 153--155.
+A clustering technique for summarizing multivariate data, Behavioral Science. 1967. V. 12. Iss. 2. P. 153--155.
 
 \bibitem{Ward-canonical}
 {\it Joe H., Ward Jr.}
-Hierarchical grouping to optimize an objective function, Journal of the American Statistical Association. 1963. V. 58 Iss. 301 P. 236--244.
+Hierarchical grouping to optimize an objective function, Journal of the American Statistical Association. 1963. V. 58. Iss. 301. P. 236--244.
 
 \bibitem{Mirkin-Clustering-A-Data-Recovery-Approach}
 {\it Mirkin B.}
@@ -316,20 +338,36 @@ Clustering: A Data Recovery Approach. London: CRC Press, 2012.
 
 \bibitem{Anomalous-Clustring}
 {\it Chiang M.M.-T., Mirkin B.}
-Intelligent choice of the number of clusters in k-means clustering: an experimental study with different cluster spreads, Journal of Classification. 2010. V. 27 Iss. 1. 3--40.
+Intelligent choice of the number of clusters in k-means clustering: an experimental study with different cluster spreads, Journal of Classification. 2010. V. 27. Iss. 1. P. 3--40.
 
 \bibitem{Amorim-Makarenkov-Mirkin}
 {\it de Amorim R.C., Makarenkov V., Mirkin B.}
-\mbox{A-Ward$ _{p\beta} $}: Effective hierarchical clustering using the Minkowski metric and a fast \mbox{k-means} initialisation. Information Sciences. 2016. V. 370-371 P. 343--354.
+\mbox{A-Ward$ _{p\beta} $}: Effective hierarchical clustering using the Minkowski metric and a fast \mbox{k-means} initialisation. Information Sciences. 2016. V. 370--371. P. 343--354.
 
 \bibitem{SW-Based-Search}
 {\it de Amorim R.C., Shestakov A., Mirkin B., Makarenkov V.}
-The Minkowski central partition as a pointer to a suitable distance exponent and consensus partitioning. Pattern Recognition. 2017. V. 67 P. 62--72.
+The Minkowski central partition as a pointer to a suitable distance exponent and consensus partitioning. Pattern Recognition. 2017. V. 67. P. 62--72.
 
 \bibitem{SW-Canonical}
 {\it Rousseeuw P.}
-Silhouettes: A graphical aid to the interpretation and validation of cluster analysis. Journal of Computational and Applied Mathematics. 1987. V.20 P. 53--65.
+Silhouettes: A graphical aid to the interpretation and validation of cluster analysis. Journal of Computational and Applied Mathematics. 1987. V.20. P. 53--65.
 
+\bibitem{CrossValidation-canonical}
+\textbf{Добавить какую-нибудь каноническую статью по кросс-валидации.}
+
+\bibitem{Kovaleva}
+{\it Kovaleva E., Mirkin B.}
+Bisecting K-Means and 1D Projection Divisive Clustering: A Unified Framework and Experimental Comparison. Journal of Classification. 2015. V. 32. Iss. 3. P. 414--442.
+
+\bibitem{ARI-canonical}
+{\it Hubert L., Arabie P.}
+Comparing partitions. Journal of Classification. 1985. V. 2. \mbox{Iss. 1.} P. 193--218.
+
+\bibitem{SW1}
+\textbf{Статья 1, в которой SW хорошо зарекомендовала себя}
+
+\bibitem{SW2}
+\textbf{Статья 2, в которой SW хорошо зарекомендовала себя}
 \end{thebibliography}
 
 \AdditionalInformation{Еремейкин П.А.}{Национальный исследовательский университет <<Высшая школа экономики>>, студент, Москва}{eremeykin@gmail.com}
